load google drive

--- a/ddpm_experiment.ipynb
+++ b/ddpm_experiment.ipynb
@@ -7,11 +7,57 @@
    "source": [
     "# This is my own experimental code of the pytorch version ddpm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e87b44ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 挂载google drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# 配置环境\n",
+    "# TODO\n",
+    "! pip install denoising_diffusion_pytorch "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06f38fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import repo code\n",
+    "import os, sys\n",
+    "sys.path.append('/content/denoising-diffusion-pytorch')   # 如果仓库在这里\n",
+    "\n",
+    "from denoising_diffusion_pytorch import Unet, GaussianDiffusion, Trainer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd4fb39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# configure our model"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ddpm35",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
